Changes to get URLs

--- a/Oracle_Storage/pom.xml
+++ b/Oracle_Storage/pom.xml
@@ -98,6 +98,16 @@
   		<artifactId>jersey-media-json-jackson</artifactId>
   		<version>2.26</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.glassfish.jersey.media</groupId>
+  		<artifactId>jersey-media-multipart</artifactId>
+  		<version>2.26</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jvnet.mimepull</groupId>
+  		<artifactId>mimepull</artifactId>
+  		<version>1.9.7</version>
+  	</dependency>
   </dependencies>
   <packaging>war</packaging>
 </project>
