--- a/Oracle_Storage/pom.xml
+++ b/Oracle_Storage/pom.xml
@@ -108,6 +108,21 @@
   		<artifactId>mimepull</artifactId>
   		<version>1.9.7</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.thetransactioncompany</groupId>
+  		<artifactId>cors-filter</artifactId>
+  		<version>2.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>1.3.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.glassfish.jersey.media</groupId>
+  		<artifactId>jersey-media-moxy</artifactId>
+  		<version>2.26</version>
+  	</dependency>
   </dependencies>
   <packaging>war</packaging>
 </project>
