Adding files to upload/bulk upload

--- a/Oracle_Storage/WebContent/properties/auth.properties
+++ b/Oracle_Storage/WebContent/properties/auth.properties
@@ -1,5 +1,5 @@
-#Mon Mar 05 15:27:04 EST 2018
+#Fri Apr 13 17:16:01 EDT 2018
 X-Storage-Pass=Yellow99
-X-Auth-Token=AUTH_tkb6da77fca4f8504e06d3f7a35124f82c
+X-Auth-Token=AUTH_tkc3ed7a28c154ef8e7280faa4596197ef
 X-Storage-User=Storage-gse00013232\:vijaya.vishwanath@oracle.com
-X-Storage-Token=AUTH_tkb6da77fca4f8504e06d3f7a35124f82c
+X-Storage-Token=AUTH_tkc3ed7a28c154ef8e7280faa4596197ef
