Adding Large Upload and download capabilities.

--- a/Oracle_Storage/WebContent/properties/auth.properties
+++ b/Oracle_Storage/WebContent/properties/auth.properties
@@ -1,5 +1,5 @@
-#Wed Apr 18 18:04:22 EDT 2018
-X-Storage-Pass=Yellow99
-X-Auth-Token=AUTH_tke7266ca948051ac80388b27c2762cc39
-X-Storage-User=Storage-gse00013232\:vijaya.vishwanath@oracle.com
-X-Storage-Token=AUTH_tke7266ca948051ac80388b27c2762cc39
+#Mon Apr 23 16:50:39 EDT 2018
+X-Storage-Pass=comOse@1Villa
+X-Auth-Token=AUTH_tkf64088dd7ef7fbc42c2d5680d42786a6
+X-Storage-User=Storage-gse00013994\:cloud.admin
+X-Storage-Token=AUTH_tkf64088dd7ef7fbc42c2d5680d42786a6
