--- a/Oracle_Storage/pom.xml
+++ b/Oracle_Storage/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Oracle_Storage</groupId>
 	<artifactId>Oracle_Storage</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -132,6 +132,12 @@
   		<groupId>com.squareup.okhttp</groupId>
   		<artifactId>okhttp</artifactId>
   		<version>2.7.5</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>tomcat</groupId>
+  		<artifactId>servlet-api</artifactId>
+  		<version>5.5.23</version>
+  		<scope>provided</scope>
   	</dependency>
   </dependencies>
   <packaging>war</packaging>
