--- a/Oracle_Storage/WebContent/properties/auth.properties
+++ b/Oracle_Storage/WebContent/properties/auth.properties
@@ -1,5 +1,5 @@
 #Mon Apr 23 16:50:39 EDT 2018
-X-Storage-Pass=comOse@1Villa
-X-Auth-Token=AUTH_tkf64088dd7ef7fbc42c2d5680d42786a6
-X-Storage-User=Storage-gse00013994\:cloud.admin
-X-Storage-Token=AUTH_tkf64088dd7ef7fbc42c2d5680d42786a6
+X-Storage-Pass=
+X-Auth-Token=
+X-Storage-User=
+X-Storage-Token=
